# chimera-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MUTATION.md  Makefile  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  RELEASING.md  SECURITY.md  VISION.md  docker-compose.yml  hatch_build.py  install.sh  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  desktop-release.yml  publish.yml  quality-bench.yml
apps/desktop/: README.md  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build_sidecar.py  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecar/: chimera_backend.py
apps/desktop/src-tauri/src/: main.rs
bench/cascade/: RESULTS.md
bench/hierarchy/: README.md  RESULTS.md  run_paired.py  tasks.py
bench/hierarchy_multistep/: README.md  RESULTS.md  run.py
bench/hierarchy_sweep/: README.md  cache_cost.py  run.py
bench/learning_lift/: PREREGISTRATION.md  RESULTS.md  run_learning.py
bench/llm_benchmarks/: PREREGISTRATION.md  arms.py  datasets.py  gsm8k.py  humaneval.py  run.py
bench/local_lift/: PREREGISTRATION.md  README.md  RESULTS.md  run_ab.py  run_ci.py  run_gate_ab.py  run_paired.py  tasks.py  tasks_algorithms.py  tasks_bugfix.py  tasks_parsing.py
bench/skillcard/: PREDICTION.md  RESULTS.md
bench/swe_bench/: PREREGISTRATION.md
bench/terminal_bench/: PLAN.md  README.md  RESULTS.md  chimera_agent.py  chimera_installed_agent.py  collect.py  run_ab.sh  setup.sh
chimera/: __init__.py  _benchmark_snapshot.json  _maturity_snapshot.json  config.py  deliver.py  features.py  obs.py  pet.py  telemetry.py
chimera/api/: __init__.py  app.py  benchmarks_api.py  config_api.py  config_test.py  exec_stream.py  features.py  fs_api.py  git_api.py  governance.py  maturity_api.py  mcp_api.py  memory_layers.py  openai_compat.py  runs.py  schema_dump.py  schemas.py  sessions.py  tools_api.py  usage.py  version_api.py
chimera/cli/: __init__.py  main.py
chimera/core/: __init__.py  agent.py  autonomous.py  checklist.py  checkpoint.py  contract.py  events.py  explorer.py  ledger.py  planner.py  repomap.py  runstate.py  spec_test.py  spine.py  strong_verify.py  subagent.py  supervisor.py  task_normalizer.py  tool_loop.py  verify.py  worktree.py
chimera/ecosystem/: __init__.py  change_queue.py  events.py  evolution.py  loop.py  meta_agent.py  spec.py  trajectory.py
chimera/eval/: __init__.py  anytime.py  bench_ab.py  benchmark_snapshot.py  cache_cost.py  cascade_bench.py  chained.py  continuous.py  evoclaw.py  fusion_ab.py  hard.py  hierarchy_ab.py  hierarchy_multistep.py  injection.py  maturity.py  maturity_snapshot.py  memory_bench.py  paired.py  probe.py  rubric.py  rubric_grade.py  sandbox.py  scenarios.py  schema_ab.py  skillcard_ab.py  spec_tuning.py  swe_bench.py  terminal_bench.py  transfer.py
chimera/evolution/: __init__.py  attribution.py  auto_evolve.py  card_retrieval.py  collective.py  context.py  diff_gate.py  edit_diagnostic.py  evolver.py  experience.py  gepa.py  learned_skill.py  lifecycle_policy.py  playbook.py  refine_bridge.py  rollback.py  skill_nudges.py  skill_store.py  stagnation.py  trace_probe.py  wiring.py
chimera/fusion/: __init__.py  cascade.py  consistency.py  engine.py  probe_log.py  receipts.py  route_log.py  router.py  task_type.py  verifier_select.py
chimera/governance/: __init__.py  actors.py  aggregate_monitor.py  allowlist.py  audit.py  drift.py  governed_tool.py  kernel.py  ledger.py  ledger_tool.py  policy.py  precedent.py  quarantine.py  sanitize.py  validator.py
chimera/integrations/: __init__.py  a2a.py  connectors.py  mcp_client.py  mcp_config.py  messaging.py  openapi.py
chimera/interface/: __init__.py  profile.py  session.py
chimera/kanban/: __init__.py  board.py  dispatch.py  lanes.py  models.py
chimera/memory/: __init__.py  capture.py  consolidate.py  dreaming.py  gate.py  graph.py  manager.py  models.py  nudges.py  semantic.py  sqlite_store.py  store.py  value.py
chimera/migration/: __init__.py  base.py  importers.py
chimera/orchestration/: __init__.py  artifacts.py  brief.py  budget.py  comms.py  crew.py  envelope_verify.py  hierarchy.py  isolation.py  lifecycle.py  project.py  receipts.py  roles.py  spec.py
chimera/providers/: __init__.py  cache.py  catalog.py  failover.py  gateway.py  prompt_cache.py
chimera/sandbox/: __init__.py  base.py  confirm.py  docker.py  local.py
chimera/scheduler/: __init__.py  daemon.py  engine.py  learner.py  models.py  store.py
chimera/scrape/: __init__.py  clean.py  crawl.py  extract.py  fetch.py  firecrawl.py  ssrf.py
chimera/tools/: web.py  (+23 more)
docker/: Dockerfile.sandbox  README.md
docs/: architecture.md  benchmarks.md  deploy.md  extending.md  fusion-receipts.md  index.md  mcp.md  recipes.md  security.md  usage.md
examples/: README.md  mcp_github.py  spec.yaml  workflow.yaml
scripts/: mutation_allowlist.toml  mutation_gate.py
tests/: conftest.py  mcp_demo_server.py  test_a2a.py  test_a2a_stream.py  test_a2a_stream_auth.py  test_actors.py  test_agent.py  test_aggregate_monitor.py  test_agreement_routing.py  test_allowlist.py  test_anytime.py  test_api.py  test_app_cron.py  test_artifacts.py  test_assist_cli.py  test_attribution.py  test_audit_chain.py  test_auto_evolve.py  test_autonomous.py  test_bench_ab.py  test_benchmarks_api.py  test_blind_panel.py  test_brief.py  test_browser.py  test_budget.py  test_cache_cost.py  test_card_retrieval.py  test_cascade.py  test_chart.py  test_checklist.py  test_checkpoint.py  test_checkpoint_resume.py  test_cli.py  test_collective_skill.py  test_config.py  test_config_test.py  test_contract.py  test_cron_daemon.py  test_cron_learner.py  test_cron_reload.py  (+164 more)
(+107 files in other folders)
