[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-agent"
version = "0.7.0"
description = "An open-source, self-evolving AI agent whose reasoning core is an LLM-Fusion engine (panel -> judge -> synthesizer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The Chimera Agent Authors", email = "chimeraagent01@gmail.com" }]
keywords = [
    "ai-agent",
    "llm",
    "llm-fusion",
    "self-evolving",
    "multi-agent",
    "autonomous-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "textual>=0.60",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
# Native messaging platform adapters. Install to run `chimera serve --discord/--slack`;
# the core agent never requires it. (Telegram needs no extra — it is plain HTTP.)
messaging = [
    "discord.py>=2.3",
    "slack-sdk>=3.27",
]
# The youtube_transcript reference tool. Fragile by nature (YouTube blocks scraping), so
# it stays opt-in; every other reference tool needs no extra.
youtube = [
    "youtube-transcript-api>=0.6",
]
# Document ingestion for the read_document tool: any-format -> Markdown via MarkItDown.
# Opt-in so the core stays light; the tool gives an install hint when this isn't present.
documents = [
    "markitdown[docx,pptx,xlsx,pdf]>=0.1",
]
# Web navigation for the browser tool (accessibility-tree driving). Heavy: also needs a Chromium
# binary (`playwright install chromium`). Opt-in; the tool gives an install hint when absent.
browser = [
    "playwright>=1.40",
]
# Standard-benchmark grounding: the terminal-bench harness for the honest weak-model-lift A/B.
# Opt-in and heavy (Docker-based); the adapter gives an install hint when absent. The A/B stats
# engine (chimera bench-compare) needs no extra. Marker: terminal-bench requires Python >=3.12,
# so it's excluded on 3.11 rather than breaking resolution (the adapter hints to install it).
bench = [
    "terminal-bench>=0.2; python_version >= '3.12'",
]
# Build the documentation site (mkdocs-material). Only needed to render/deploy docs.
docs = [
    "mkdocs-material>=9.5",
]
# Opt-in model evolution (LoRA/SFT/DPO). Heavy + GPU-bound — never required by the
# agent; install only to run a `chimera evolve recipe` training script.
train = [
    "trl>=0.9",
    "peft>=0.11",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-croniter>=2.0",
]

[project.scripts]
chimera = "chimera.cli.main:app"

[project.urls]
Homepage = "https://github.com/brcampidelli/chimera-agent"
Repository = "https://github.com/brcampidelli/chimera-agent"
Issues = "https://github.com/brcampidelli/chimera-agent/issues"
Changelog = "https://github.com/brcampidelli/chimera-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["chimera"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The default run is hermetic (no network). Integration tests hit a real
# provider and are opt-in via `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live test that calls a real provider API (needs OPENROUTER_API_KEY)",
]
