[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-agent"
version = "0.35.0"
description = "An open-source, self-evolving AI agent whose reasoning core is an LLM-Fusion engine (panel -> judge -> synthesizer)."
readme = "README.md"
# Upper bound tracks the litellm ceiling below (<1.92, which requires Python <3.14). Without it a
# 3.14 user reads ">=3.11", installs, and hits an opaque resolution failure instead of a clear
# "requires a Python before 3.14". Lift both together when litellm ships Windows/macOS wheels again.
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "The Chimera Agent Authors", email = "chimeraagent01@gmail.com" }]
keywords = [
    "ai-agent",
    "llm",
    "llm-fusion",
    "self-evolving",
    "multi-agent",
    "autonomous-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Ceiling, not preference: 1.92 moved litellm to a compiled Rust core and publishes wheels ONLY
    # for manylinux (x86_64/aarch64) — no Windows, no macOS. On those platforms pip falls back to the
    # sdist, which needs a Rust toolchain + maturin and fails on a normal machine. 1.91.4 is the last
    # release with a pure-Python `py3-none-any` wheel, so it installs everywhere. Lift this the moment
    # upstream ships Windows/macOS wheels again.
    "litellm>=1.40,<1.92",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "textual>=0.60",
    # Full web browser (navigate/click/type/read_text/find) in the base, so anyone who installs or
    # clones Chimera gets it out of the box. The Chromium binary itself is NOT shipped by pip — the
    # browser tool auto-downloads it (~150MB) on first use (disable with CHIMERA_BROWSER_AUTO_INSTALL=0).
    "playwright>=1.40",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
# Native messaging platform adapters. Install to run `chimera serve --discord/--slack`;
# the core agent never requires it. (Telegram needs no extra — it is plain HTTP.)
messaging = [
    "discord.py>=2.3",
    "slack-sdk>=3.27",
]
# The youtube_transcript reference tool. Fragile by nature (YouTube blocks scraping), so
# it stays opt-in; every other reference tool needs no extra.
youtube = [
    "youtube-transcript-api>=0.6",
]
# Local speech-to-text for the transcribe_audio tool (offline/private). Heavy: pulls CTranslate2 +
# downloads a Whisper model on first use. Opt-in — without it, transcribe_audio uses the OpenAI
# Whisper API (needs an OpenAI key). Chimera orchestrates Whisper; it does not train an ASR model.
stt = [
    "faster-whisper>=1.0",
]
# Media download for the download_media tool: yt-dlp (1000+ sites, actively maintained — the robust
# alternative to pytube). Audio extraction also needs ffmpeg on PATH. Opt-in.
media-dl = [
    "yt-dlp>=2024.1",
]
# Local image generation for generate_image (CHIMERA_IMAGE_BACKEND=local). VERY heavy: pulls torch +
# diffusers and downloads multi-GB model weights; needs a real GPU. Opt-in — the hosted OpenAI path is
# the default. Chimera *runs* a diffusion model (FLUX.1-schnell, Apache-2.0); it does not train one.
imagegen-local = [
    "diffusers>=0.30",
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.30",
]
# Data-science libraries for the `data_analysis` skill's sandbox code (pandas + scikit-learn). Opt-in —
# the skill writes code that imports these; without them the generated script degrades to a clear
# ImportError. Chimera *uses* these libraries in the code sandbox; it never reimplements them.
data = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
# Charting libraries for the `data_visualization` skill's sandbox code (matplotlib/seaborn = static
# PNG/SVG, plotly = interactive HTML). Opt-in — the skill writes code that imports these; without them
# the generated script degrades to a clear ImportError. Chimera *uses* these libraries; it never
# reimplements them.
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
]
# Static (PNG/SVG) rendering for the `render_chart` Vega-Lite tool. Heavy: vl-convert-python is a
# Rust+V8 binary wheel. Opt-in — HTML chart output needs NO extra (it embeds the spec via a CDN).
viz-vega = [
    "vl-convert-python>=1.3",
]
# Document ingestion for the read_document tool: any-format -> Markdown via MarkItDown.
# Opt-in so the core stays light; the tool gives an install hint when this isn't present.
documents = [
    "markitdown[docx,pptx,xlsx,pdf]>=0.1",
]
# Batteries-included: everything a general-purpose assistant needs in one install — messaging
# adapters, MCP, documents (docx/pdf/xlsx→md), media download (yt-dlp; audio also needs ffmpeg on
# PATH), local speech-to-text (faster-whisper), data analysis (pandas/scikit-learn) and charts
# (matplotlib/seaborn/plotly), plus YouTube transcripts. Deliberately EXCLUDES the GPU-heavy,
# multi-GB extras (`imagegen-local`, `train`) — install those explicitly if you have a GPU.
# One command for "I want all the features": pip install 'chimera-agent[full]'.
full = [
    "chimera-agent[messaging,mcp,documents,media-dl,stt,data,viz,youtube]",
]
# Back-compat alias: the browser (playwright) is now a CORE dependency, so `pip install
# 'chimera-agent[browser]'` still works but installs nothing extra. The Chromium binary is
# auto-downloaded on first browser use.
browser = []
# Observability: opt-in OpenTelemetry. With this installed and CHIMERA_OTEL=1 (or the standard
# OTEL_EXPORTER_OTLP_ENDPOINT set), Chimera exports OTLP spans (tool calls) + metrics (tokens/cost)
# to any OTLP backend (Jaeger/Tempo/Grafana). Off and zero-overhead without it.
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# Standard-benchmark grounding: the terminal-bench harness for the honest weak-model-lift A/B.
# Opt-in and heavy (Docker-based); the adapter gives an install hint when absent. The A/B stats
# engine (chimera bench-compare) needs no extra. Marker: terminal-bench requires Python >=3.12,
# so it's excluded on 3.11 rather than breaking resolution (the adapter hints to install it).
bench = [
    "terminal-bench>=0.2; python_version >= '3.12'",
]
# Desktop app backend: the FastAPI/SSE API that the React frontend (apps/desktop) talks to.
# Opt-in — the core CLI/gateway never needs it (the stdlib http.server still serves messaging +
# webhooks). `chimera app` starts this and serves the built SPA same-origin. sse-starlette gives
# the token/tool/done event stream; uvicorn is the ASGI server.
desktop = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
]
# Build the documentation site (mkdocs-material). Only needed to render/deploy docs.
docs = [
    "mkdocs-material>=9.5",
]
# Opt-in model evolution (LoRA/SFT/DPO). Heavy + GPU-bound — never required by the
# agent; install only to run a `chimera evolve recipe` training script.
train = [
    "trl>=0.9",
    "peft>=0.11",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-croniter>=2.0",
    # Mutation testing for the "if this is wrong, we're lying" modules — see MUTATION.md.
    # POSIX-only (it forks per mutant): on Windows run it under WSL. CI runs it on Linux.
    "mutmut>=3.3",
]

[project.scripts]
chimera = "chimera.cli.main:app"

[project.urls]
Homepage = "https://github.com/brcampidelli/chimera-agent"
Repository = "https://github.com/brcampidelli/chimera-agent"
Issues = "https://github.com/brcampidelli/chimera-agent/issues"
Changelog = "https://github.com/brcampidelli/chimera-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["chimera"]
# The built desktop SPA (apps/desktop/dist) is gitignored but must ship in the wheel so that a
# `pip install chimera-agent[desktop]` user actually gets the UI (not just the API). `artifacts`
# un-ignores it for file selection; `force-include` maps it into the package as chimera/_desktop_dist,
# where the CLI's `chimera app`/`serve --ui` looks for it when no source-checkout dist is present.
artifacts = ["apps/desktop/dist/**"]

# The force-include that maps the built SPA into the wheel is declared in `hatch_build.py`, not here,
# so it applies only when the SPA has actually been built. As a static table it pointed at a
# gitignored path and broke every from-source build (`pip install -e .`, `uv sync`, all of CI) with
# `Forced include not found`. See that file for the full rationale.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# `uv build` builds the sdist first, then builds the wheel *from that sdist*. The wheel force-include
# points at `apps/desktop/dist`, so that path must exist inside the sdist — otherwise the
# wheel-from-sdist step ships a UI-less wheel. Keep the built SPA in the sdist at its original path
# (it's gitignored, so `artifacts` un-ignores it). `hatch_build.py` is tracked, so the sdist picks it
# up by default — the wheel-from-sdist step needs the hook present to re-apply the include.
[tool.hatch.build.targets.sdist]
artifacts = ["apps/desktop/dist/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The default run is hermetic (no network). Integration tests hit a real
# provider and are opt-in via `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live test that calls a real provider API (needs OPENROUTER_API_KEY)",
]

# Mutation testing — proves the tests for the modules that, if wrong, make Chimera LIE.
# Scope is deliberately narrow (see MUTATION.md): mutating all of `chimera` would take hours and
# nobody would read the result. `only_mutate` is the real scope gate; `source_paths` just bounds the
# tree mutmut walks.
#
# VIABILITY: mutmut re-runs tests per mutant, so the test universe below is restricted to the focused
# test files for these five modules (~5s in total) instead of the full ~95s suite. tests/test_api.py
# is deliberately EXCLUDED: it alone takes ~65s, and every runs.py entry point it covers
# (build_receipt / append_run / load_runs) is tested directly by tests/test_runs.py.
[tool.mutmut]
source_paths = ["chimera"]
only_mutate = [
    "chimera/eval/paired.py",       # McNemar/Wilson stats behind every published benchmark number
    "chimera/api/version_api.py",   # the update-available signal
    "chimera/core/verify.py",       # the pass/fail authority of verify-or-revert
    "chimera/evolution/diff_gate.py",  # the "did it actually change anything" gate
    "chimera/api/runs.py",          # receipt building: the reverted/success flags the UI reports
    # Security enforcement, not just credibility: this module decides whether a command the
    # model chose runs on YOUR machine. A silent bug here is a security bug, strictly worse
    # than a wrong benchmark number — so it belongs inside the one gate that proves the
    # tests can actually fail. (Adding it immediately found that the TTY auto-detection
    # had no test at all: every mutant of that line survived.)
    "chimera/sandbox/confirm.py",   # the host-exec gate: run on the host, or refuse
]
pytest_add_cli_args_test_selection = [
    "tests/test_paired.py",       # -> chimera/eval/paired.py
    "tests/test_run_paired.py",   # -> chimera/eval/paired.py (CLI path)
    "tests/test_version_api.py",  # -> chimera/api/version_api.py
    "tests/test_verify.py",       # -> chimera/core/verify.py
    "tests/test_checkpoint.py",   # -> chimera/core/verify.py (CommandVerifier/NullVerifier)
    "tests/test_diff_gate.py",    # -> chimera/evolution/diff_gate.py
    "tests/test_runs.py",         # -> chimera/api/runs.py
    "tests/test_host_exec_confirm.py",  # -> chimera/sandbox/confirm.py
]
# mutmut runs the tests from a copied `mutants/` tree. tests/test_run_paired.py loads the paired
# runner by path out of bench/, so that tree has to come along or the run can't even collect.
also_copy = ["bench/"]
# Mutating a log call only proves the logger was called — noise, not a real gap.
do_not_mutate_patterns = ['_log\.\w+']
